# hebbian-trace-memory

./: .gitignore  A100_PLAN.md  ARCHITECTURE.md  README.md  capacity_results.json  capacity_test.py  demo.py  evaluate.py  exp_lama.py  exp_multihop.py  exp_paraphrase.py  exp_scaling.py  export_weights.py  medium_test.py  paper.tex  paper_draft.md  pyproject.toml  references.bib
figures/: generate.py
hebbian_trace/: __init__.py  demo_chat.py  demo_nlp.py  evaluate.py  gpt2_tasks.py  gpt2_trace.py  model.py  nlp_evaluate.py  nlp_tasks.py  rag_baselines.py  tasks.py  train.py
hebbian_trace/experiments/: 7b_generalization.patch  exp10_paragraph_storage.py  exp11_dual_gates.py  exp12_realistic_benchmarks.py  exp13_contextual_q.py  exp14_contrastive_ctx.py  exp15_perhead_beta.py  exp16_multi_session.py  exp17_capacity_stress.py  exp18_gpt2_medium.py  exp19_phi2_transfer.py  exp1_associative.py  exp20_multi_token.py  exp21_replay.py  exp22_pattern_completion.py  exp23_entorhinal_encoder.py  (+18 more)
notebooks/: demo.ipynb
results/: counterfactual_gpt2-medium.json  counterfactual_gpt2.json  counterfactual_meta-llama_Llama-2-7b-hf.json  counterfactual_mistralai_Mistral-7B-v0.1.json  exp17_capacity.json  exp18_gpt2_medium.json  exp19_phi2_transfer.json  exp28_hashed_traces.json  exp30_capacity_1k.json  exp30_gpt2.json  exp30_meta-llama_Llama-2-7b-hf.json  exp_lama.json  scaling_gpt2-medium.json  scaling_gpt2.json  scaling_meta-llama_Llama-2-7b-hf.json  scaling_mistralai_Mistral-7B-v0.1.json  sweep_gpt2.json  sweep_meta-llama_Llama-2-7b-hf.json  sweep_mistralai_Mistral-7B-v0.1.json
